Proper formatting for HTML CDN + NPM installation examples.

--- a/new-docs/HTML.mdx
+++ b/new-docs/HTML.mdx
@@ -12,11 +12,15 @@ import * as PayButton from '@paybutton/paybutton';
 
 ### CDN
 
-`<script src="https://unpkg.com/@paybutton/paybutton@1.0.3/dist/paybutton.js"></script>`
+```
+<script src="https://unpkg.com/@paybutton/paybutton@1.0.3/dist/paybutton.js"></script>
+```
 
 ### npm
 
-`npm i @paybutton/paybutton`
+```
+npm i @paybutton/paybutton
+```
 
 # Usage
 
