Added example to home page with automatic version

--- a/new-docs/HTML.mdx
+++ b/new-docs/HTML.mdx
@@ -29,7 +29,7 @@ npm i @paybutton/paybutton
 #### Basic Usage
 
 <Playground language="html" showLivePreview={false}>
-  <div class="paybutton" to="bitcoincash:qrmm7edwuj4jf7tnvygjyztyy0a0qxvl7q9ayphulp" />
+  <div class="paybutton" to="bitcoincash:qrmm7edwuj4jf7tnvygjyztyy0a0qxvl7q9ayphulp"></div>
 </Playground>
 
 #### Advanced Usage (All Options)
@@ -45,11 +45,11 @@ npm i @paybutton/paybutton
     text="Send BCH"
     hover-text="Click Me"
     success-text="Thank you for supporting us"
-	theme='{ "palette": { "primary": "#ee8b2b", "secondary": "#fefbf8", "tertiary": "#504030"} }'
-	random-satoshis="true"
-	on-success="console.log('success');"
-	on-transaction="console.log('transaction');"
-  />
+	  theme='{ "palette": { "primary": "#ee8b2b", "secondary": "#fefbf8", "tertiary": "#504030"} }'
+	  random-satoshis="true"
+	  on-success="console.log('success');"
+	  on-transaction="console.log('transaction');"
+  ></div>
 </Playground>
 
 ## Widget
