--- a/new-docs/HTML.mdx
+++ b/new-docs/HTML.mdx
@@ -53,3 +53,19 @@ npm i @paybutton/paybutton
 </Playground>
 
 ## Widget
+
+<Playground language="html" showLivePreview={false}>
+  <div class="paybutton-widget"
+    to="bitcoincash:qrmm7edwuj4jf7tnvygjyztyy0a0qxvl7q9ayphulp"
+    amount="10"
+    currency="USD"
+    animation="invert"
+    text="Send BCH"
+    hover-text="Click Me"
+    success-text="Thank you for supporting us"
+    theme='{ "palette": { "primary": "#065a82", "secondary": "#eff9fe", "tertiary": "#21295c"} }'
+    random-satoshis="true"
+    on-success="console.log('success');"
+    on-transaction="console.log('transaction');"
+  ></div>
+</Playground>
